--- a/inputs.conf
+++ b/inputs.conf
@@ -1,5 +1,5 @@
 [default]
-host = test-sensor
+host = sensor-name
 [monitor:///home/wlanpi/wiperf/data/wiperf-speedtest-splunk.csv]
 index=main
 sourcetype=speedtestcsv
