--- a/inputs.conf
+++ b/inputs.conf
@@ -1,20 +1,20 @@
 [default]
-host = sensor-name
-[monitor:///home/wlanpi/wiperf/data/wiperf-speedtest-splunk.csv]
+host = SENSOR-NAME
+[monitor:///home/wlanpi/wiperf/data/wiperf-speedtest-splunk.json]
 index=main
-sourcetype=speedtestcsv
-[monitor:///home/wlanpi/wiperf/data/wiperf-ping-splunk.csv]
+sourcetype=speedtest
+[monitor:///home/wlanpi/wiperf/data/wiperf-ping-splunk.json]
 index=main
-sourcetype=pingercsv
-[monitor:///home/wlanpi/wiperf/data/wiperf-iperf3-tcp-splunk.csv]
+sourcetype=pinger
+[monitor:///home/wlanpi/wiperf/data/wiperf-iperf3-tcp-splunk.json]
 index=main
-sourcetype=iperftcpcsv
-[monitor:///home/wlanpi/wiperf/data/wiperf-iperf3-udp-splunk.csv]
+sourcetype=iperftcp
+[monitor:///home/wlanpi/wiperf/data/wiperf-iperf3-udp-splunk.json]
 index=main
-sourcetype=iperfudpcsv
-[monitor:///home/wlanpi/wiperf/data/wiperf-dhcp-splunk.csv]
+sourcetype=iperfudp
+[monitor:///home/wlanpi/wiperf/data/wiperf-dhcp-splunk.json]
 index=main
-sourcetype=dhcprenewalcsv
-[monitor:///home/wlanpi/wiperf/data/wiperf-dns-splunk.csv]
+sourcetype=dhcprenewal
+[monitor:///home/wlanpi/wiperf/data/wiperf-dns-splunk.json]
 index=main
-sourcetype=dnsrenewalcsv
+sourcetype=dnsrenewal
